--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     border: 5px solid black;
 }
 
-.bodyTipoProd, .nav, .bodyProd {
+.content, .nav {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -42,3 +42,12 @@ th {
 th, td {
     padding: 15px 15px;
 }
+
+form {
+    margin: 2%;
+}
+
+input {
+    margin: 5px;
+}
+
